# api/b7s-swagger.yaml
@@ -84,7 +84,6 @@ paths:
           description: Invalid execution request
         '500':
           description: Internal server error
-          
 
   /api/v1/functions/requests/result:
     post:
@@ -111,6 +110,30 @@ paths:
         '500':
           description: Internal server error
 
+  /api/v1/functions/execute/batch/result:
+    post:
+      tags:
+        - functions
+      summary: Get the result of a Batch Execution Request
+      description: Get the result of a Batch Execution Request
+      operationId: batchExecutionResult
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BatchResultRequest'
+        required: true
+      responses:
+        '200':
+          description: Batch Execution result retrieved
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BatchExecutionResponse'
+        '400':
+          description: Invalid request
+        '500':
+          description: Internal server error
 
   /api/v1/functions/install:
     post:
@@ -168,8 +191,8 @@ components:
           x-go-type-skip-optional-pointer: true
         parameters:
           type: array
-          description: Deprecated - use the `arguments` field.
-          deprecated: true 
+          deprecated: true
+          x-deprecated-reason: Use the `arguments` field.
           items:
             $ref: '#/components/schemas/ExecutionParameter'
           example: 
@@ -554,7 +577,6 @@ components:
             - [ "--arg", "second-invocation-argument", "other arguments..." ]
             - [ "--arg", "third-invocation-argument",  "other arguments..." ]
           x-go-type-skip-optional-pointer: true
-       
 
     TemplateExecutionRequest:
       required:
@@ -575,7 +597,6 @@ components:
           x-go-type-skip-optional-pointer: true
         config:
           $ref: '#/components/schemas/ExecutionConfig'
-
 
     BatchExecutionResponse:
       type: object
@@ -643,8 +664,15 @@ components:
           type: object
           x-go-type-skip-optional-pointer: true
 
-
-
-
-  
-    
+    BatchResultRequest:
+      description: Get the result of an Batch Execution Request, identified by the request ID
+      type: object
+      required:
+        - id
+      x-go-type-skip-optional-pointer: true
+      properties:
+        id:
+          description: ID of the Batch Execution Request
+          type: string
+          example: b6fbbc5e-1d16-4ea9-b557-51f4a6ab565c
+          x-go-type-skip-optional-pointer: true
