# api/client.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package api
 
 import (
@@ -97,6 +97,11 @@ type ClientInterface interface {
 
 	ExecuteFunctionBatch(ctx context.Context, body ExecuteFunctionBatchJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error)
 
+	// BatchExecutionResultWithBody request with any body
+	BatchExecutionResultWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
+
+	BatchExecutionResult(ctx context.Context, body BatchExecutionResultJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error)
+
 	// InstallFunctionWithBody request with any body
 	InstallFunctionWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 
@@ -149,6 +154,30 @@ func (c *Client) ExecuteFunctionBatchWithBody(ctx context.Context, contentType s
 
 func (c *Client) ExecuteFunctionBatch(ctx context.Context, body ExecuteFunctionBatchJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error) {
 	req, err := NewExecuteFunctionBatchRequest(c.Server, body)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
+}
+
+func (c *Client) BatchExecutionResultWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewBatchExecutionResultRequestWithBody(c.Server, contentType, body)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
+}
+
+func (c *Client) BatchExecutionResult(ctx context.Context, body BatchExecutionResultJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewBatchExecutionResultRequest(c.Server, body)
 	if err != nil {
 		return nil, err
 	}
@@ -280,6 +309,46 @@ func NewExecuteFunctionBatchRequestWithBody(server string, contentType string, b
 	}
 
 	operationPath := fmt.Sprintf("/api/v1/functions/execute/batch")
+	if operationPath[0] == '/' {
+		operationPath = "." + operationPath
+	}
+
+	queryURL, err := serverURL.Parse(operationPath)
+	if err != nil {
+		return nil, err
+	}
+
+	req, err := http.NewRequest("POST", queryURL.String(), body)
+	if err != nil {
+		return nil, err
+	}
+
+	req.Header.Add("Content-Type", contentType)
+
+	return req, nil
+}
+
+// NewBatchExecutionResultRequest calls the generic BatchExecutionResult builder with application/json body
+func NewBatchExecutionResultRequest(server string, body BatchExecutionResultJSONRequestBody) (*http.Request, error) {
+	var bodyReader io.Reader
+	buf, err := json.Marshal(body)
+	if err != nil {
+		return nil, err
+	}
+	bodyReader = bytes.NewReader(buf)
+	return NewBatchExecutionResultRequestWithBody(server, "application/json", bodyReader)
+}
+
+// NewBatchExecutionResultRequestWithBody generates requests for BatchExecutionResult with any type of body
+func NewBatchExecutionResultRequestWithBody(server string, contentType string, body io.Reader) (*http.Request, error) {
+	var err error
+
+	serverURL, err := url.Parse(server)
+	if err != nil {
+		return nil, err
+	}
+
+	operationPath := fmt.Sprintf("/api/v1/functions/execute/batch/result")
 	if operationPath[0] == '/' {
 		operationPath = "." + operationPath
 	}
@@ -459,6 +528,11 @@ type ClientWithResponsesInterface interface {
 
 	ExecuteFunctionBatchWithResponse(ctx context.Context, body ExecuteFunctionBatchJSONRequestBody, reqEditors ...RequestEditorFn) (*ExecuteFunctionBatchResponse, error)
 
+	// BatchExecutionResultWithBodyWithResponse request with any body
+	BatchExecutionResultWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*BatchExecutionResultResponse, error)
+
+	BatchExecutionResultWithResponse(ctx context.Context, body BatchExecutionResultJSONRequestBody, reqEditors ...RequestEditorFn) (*BatchExecutionResultResponse, error)
+
 	// InstallFunctionWithBodyWithResponse request with any body
 	InstallFunctionWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*InstallFunctionResponse, error)
 
@@ -511,6 +585,28 @@ func (r ExecuteFunctionBatchResponse) Status() string {
 
 // StatusCode returns HTTPResponse.StatusCode
 func (r ExecuteFunctionBatchResponse) StatusCode() int {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.StatusCode
+	}
+	return 0
+}
+
+type BatchExecutionResultResponse struct {
+	Body         []byte
+	HTTPResponse *http.Response
+	JSON200      *BatchExecutionResponse
+}
+
+// Status returns HTTPResponse.Status
+func (r BatchExecutionResultResponse) Status() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Status
+	}
+	return http.StatusText(0)
+}
+
+// StatusCode returns HTTPResponse.StatusCode
+func (r BatchExecutionResultResponse) StatusCode() int {
 	if r.HTTPResponse != nil {
 		return r.HTTPResponse.StatusCode
 	}
@@ -617,6 +713,23 @@ func (c *ClientWithResponses) ExecuteFunctionBatchWithResponse(ctx context.Conte
 	return ParseExecuteFunctionBatchResponse(rsp)
 }
 
+// BatchExecutionResultWithBodyWithResponse request with arbitrary body returning *BatchExecutionResultResponse
+func (c *ClientWithResponses) BatchExecutionResultWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*BatchExecutionResultResponse, error) {
+	rsp, err := c.BatchExecutionResultWithBody(ctx, contentType, body, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseBatchExecutionResultResponse(rsp)
+}
+
+func (c *ClientWithResponses) BatchExecutionResultWithResponse(ctx context.Context, body BatchExecutionResultJSONRequestBody, reqEditors ...RequestEditorFn) (*BatchExecutionResultResponse, error) {
+	rsp, err := c.BatchExecutionResult(ctx, body, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseBatchExecutionResultResponse(rsp)
+}
+
 // InstallFunctionWithBodyWithResponse request with arbitrary body returning *InstallFunctionResponse
 func (c *ClientWithResponses) InstallFunctionWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*InstallFunctionResponse, error) {
 	rsp, err := c.InstallFunctionWithBody(ctx, contentType, body, reqEditors...)
@@ -695,6 +808,32 @@ func ParseExecuteFunctionBatchResponse(rsp *http.Response) (*ExecuteFunctionBatc
 	}
 
 	response := &ExecuteFunctionBatchResponse{
+		Body:         bodyBytes,
+		HTTPResponse: rsp,
+	}
+
+	switch {
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 200:
+		var dest BatchExecutionResponse
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON200 = &dest
+
+	}
+
+	return response, nil
+}
+
+// ParseBatchExecutionResultResponse parses an HTTP response from a BatchExecutionResultWithResponse call
+func ParseBatchExecutionResultResponse(rsp *http.Response) (*BatchExecutionResultResponse, error) {
+	bodyBytes, err := io.ReadAll(rsp.Body)
+	defer func() { _ = rsp.Body.Close() }()
+	if err != nil {
+		return nil, err
+	}
+
+	response := &BatchExecutionResultResponse{
 		Body:         bodyBytes,
 		HTTPResponse: rsp,
 	}
