# api/models.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package api
 
 import (
@@ -43,6 +43,12 @@ type BatchExecutionResponse struct {
 	RequestId string `json:"request_id,omitempty"`
 }
 
+// BatchResultRequest Get the result of an Batch Execution Request, identified by the request ID
+type BatchResultRequest struct {
+	// Id ID of the Batch Execution Request
+	Id string `json:"id"`
+}
+
 // ChunkResults defines model for ChunkResults.
 type ChunkResults = response.NodeChunkResults
 
@@ -65,9 +71,7 @@ type ExecutionRequest struct {
 
 	// Method Name of the WASM file to execute
 	Method string `json:"method"`
-
-	// Parameters Deprecated - use the `arguments` field.
-	// Deprecated:
+	// Deprecated: Use the `arguments` field.
 	Parameters []ExecutionParameter `json:"parameters,omitempty"`
 
 	// Topic In the scenario where workers form subgroups, you can target a specific subgroup by specifying its identifier
@@ -156,6 +160,9 @@ type ExecuteFunctionJSONRequestBody = ExecutionRequest
 
 // ExecuteFunctionBatchJSONRequestBody defines body for ExecuteFunctionBatch for application/json ContentType.
 type ExecuteFunctionBatchJSONRequestBody = BatchExecutionRequest
+
+// BatchExecutionResultJSONRequestBody defines body for BatchExecutionResult for application/json ContentType.
+type BatchExecutionResultJSONRequestBody = BatchResultRequest
 
 // InstallFunctionJSONRequestBody defines body for InstallFunction for application/json ContentType.
 type InstallFunctionJSONRequestBody = FunctionInstallRequest
